--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,9 +7,9 @@ phases:
     commands:
     - echo Logging in to Amazon ECR...
     - aws --version
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+    - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin 772146113845.dkr.ecr.ap-southeast-1.amazonaws.com
     - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-    - IMAGE_URI=${REPOSITORY_URI}:${TAG}
+    - IMAGE_URI=772146113845.dkr.ecr.ap-southeast-1.amazonaws.com/defiservice:${TAG}
   build:
     commands:
     - echo Build started on `date`
