--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.defi</groupId>
 	 <artifactId>defi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>DEFI Project</name>
+	<name>DefiService</name>
 	<description>Defi project</description>
 	<properties>
 		<java.version>17</java.version>
@@ -90,13 +90,27 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.13</version>
+				<executions>
+				 	<execution>
+					      <id>default</id>
+					      <goals>
+					       <goal>build</goal>
+					      <!--  <goal>push</goal> -->
+					      </goals>
+					  </execution>
+				</executions>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					    <repository>defi/${project.name}</repository>
+					    <tag>${project.version}</tag>
+					    <buildArgs>
+					      <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					    </buildArgs>
 				</configuration>
 			</plugin>
 		</plugins>
