--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.url=jdbc:mysql://arkadiareal.c8yrqhtwrvuy.ap-southeast-1.rds.a
 spring.datasource.password=Arkadia#123
 spring.datasource.username=admin
 spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.maximum-pool-size=5
 
 
 #JPA Configs
